
In this CVS branch, fixes in the SWIG core and improvements to the
language modules take place.  This branch is also the basis for the
"swig1.3" Debian package (currently unofficial, available from
http://www.math.uni-magdeburg.de/~mkoeppe/imo-debian).  Eventually it
will be merged with the development on the trunk of the CVS tree.

6/ 1/2001: mkoeppe
	   Added configure option "--with-swiglibdir".

5/31/2001: mkoeppe
	   [Guile] Support multiple parallel lists or vectors in
	   the typemaps provided by list-vector.i.  New typemaps file,
	   pointer-in-out.i. 

5/25/2001: cheetah (william fulton)
	   [Java] HTML update for examples.

5/28/2001: mkoeppe
	   Minor changes to the build system.  Added subdirectory for
	   Debian package control files.

5/28/2001: mkoeppe
	   [Guile] Build a runtime library, libswigguile.

5/28/2001: mkoeppe
	   [Guile] New typemap substitution $*descriptor.  Use the {}
	   syntax, rather than the "" syntax for the standard
	   typemaps, in order to work around strange macro-expansion
	   behavior of the SWIG preprocessor.  This introduces some
	   extra braces.

5/27/2001: mkoeppe
	   [Guile] Handle pointer types with typemaps, rather than
	   hard-coded. New typemap substitutions $descriptor,
	   $basedescriptor; see documentation. Some clean-up in the
	   variable/constants wrapper generator code.  New convenience
	   macro SWIG_Guile_MustGetPtr, which allows getting pointers
	   from smobs in a functional style.  New typemap file
	   "list-vector.i", providing macros that define typemaps for
	   converting between C arrays and Scheme lists and vectors.

5/25/2001: cheetah (william fulton)
	   [Java] STL string moved into its own typemap as it is c++ code and 
	   it break any c code using the typemaps.i file.
	   - Fixes for wrappers around global variables - applies to primitive 
	   types and user types (class/struct) and pointers to these.
	   - Structure member variables and class public member variables getters 